# gym-gazebo3

./: .gitignore  CMakeLists.txt  README.md  activate_env_simple.sh  package.xml  setup.py
config/: training_config.yaml
examples/: basic_example.py  test_simple_env.py  test_turtlebot3_camera_random.py
gym_gazebo3/: __init__.py
gym_gazebo3/envs/: __init__.py  empty_env_simple.py  gazebo_env.py  pioneer3at_env.py  turtlebot3_camera_env.py  turtlebot3_env.py
gym_gazebo3/utils/: __init__.py  gazebo_utils.py  ros_utils.py
gym_gazebo3/wrappers/: __init__.py  frame_stack_wrapper.py  normalize_wrapper.py
launch/: pioneer3at_gazebo_launch.py  turtlebot3_camera_launch.py  turtlebot3_gazebo_launch.py
scripts/: test_agent.py  train_agent.py  visualize_training.py
worlds/: empty_world.world  pioneer3at_world.world  turtlebot3_camera_world.world
